--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -44,23 +44,28 @@ textarea, input {
 }
 
 button,input[type="submit"] {
-  background: $color-lightgrey;
+  background: $color-button;
   padding: $pad;
   border: none;
+  border-radius: $pad;
 
   &:hover {
-    background: $color-grey;
+    background: $color-hover;
   }
 
   &:active {
-    background: $color-darkgrey;
+    background: $color-active;
   }
 }
 
+.clear-float {
+  clear: both;
+}
+
 // lists
-ul,ol,li { margin-left: $pad * 2; }
-li { display: list-item; }
-ul li { list-style: disc; }
-ol li { list-style: decimal; }
-ol ol li , ul ol li { list-style: lower-alpha; }
-ol ul li , ul ul li { list-style: square; }
+// ul,ol,li { margin-left: $pad * 2; }
+// li { display: list-item; }
+// ul li { list-style: disc; }
+// ol li { list-style: decimal; }
+// ol ol li , ul ol li { list-style: lower-alpha; }
+// ol ul li , ul ul li { list-style: square; }
