--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -1,7 +1,7 @@
 @import "./_vars.scss";
 
 * {
-  // position: static;
+  float: left;
   display: block;
   margin: 0;
   padding: 0;
@@ -9,7 +9,6 @@
   border: none;
   outline: none;
   box-sizing: border-box;
-
   font-family: $fontface-sans-serif;
   font-size: 1em;
   font-weight: normal;
@@ -24,4 +23,8 @@
 form *:focus {
   border: none;
   outline: none;
+}
+
+body {
+  height: 100%;
 }
