board items styled

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -62,6 +62,10 @@ button,input[type="submit"] {
   clear: both;
 }
 
+.front-end-main {
+  height: 70%;
+}
+
 // lists
 // ul,ol,li { margin-left: $pad * 2; }
 // li { display: list-item; }
