--- a/src/component/frontend-component/main/board/_board.scss
+++ b/src/component/frontend-component/main/board/_board.scss
@@ -1,41 +1,67 @@
-@import "../../../../style/_main.scss";
+@import "../../../../style/_vars.scss";
 
 .clear-float {
   clear: both;
 }
 
-.board-items-container * {
+.board-items-container {
   width: 100%;
   height: 40%;
 
-}
-.app-bar {
-  z-index: 0!important;
-  margin-top: $pad !important;
-  margin-bottom: $pad !important;
+  button {
+    border-radius: 0;
+  }
+
+  .app-bar {
+    margin: $pad 0;
+    background-color: $color-primary;
+    font-size: 2em;
+    color: $color-font;
+    box-shadow: inset 0 0 2em $color-tertriary;
+  }
+
 }
 
 .card-item {
-  width: calc(90%/4) !important;
-  height: calc(100%) !important;
-  float: left !important;
-  margin-left: calc(10%/8) !important;
-  margin-right: calc(10%/8) !important;
-  margin-top: $pad*4 !important;
-  box-shadow: rgba(0, 0, 0, 0.12) 10px 5px 11px, rgba(0, 0, 0, 0.12) 0px 1px 4px !important;
+  width: calc(90%);
+  height: calc(100%);
+  float: left;
+  margin: calc(10%/2);
+  box-shadow: rgba(0, 0, 0, 0.12) 10px 10px 11px, rgba(0, 0, 0, 0.12) 0px 1px 4px ;
 
-  .card-header {
-    height: 90% !important;
-
-    .card-image {
-      width: 1em !important;
-      height: 18em !important;
-    }
-
-
+  .card-image-container {
+    box-shadow: 0 0 .5em $color-lightgrey;
   }
 
+  .card-title-bar {
+    text-align: center;
+  }
   .card-view-button {
-    height: 2em !important;
+    height: 2em ;
   }
 }
+//
+// .card-item {
+//   width: calc(90%/4) ;
+//   height: calc(100%) ;
+//   float: left ;
+//   margin-left: calc(10%/8) ;
+//   margin-right: calc(10%/8) ;
+//   margin-top: $pad*4 ;
+//   box-shadow: rgba(0, 0, 0, 0.12) 10px 5px 11px, rgba(0, 0, 0, 0.12) 0px 1px 4px ;
+//
+//   .card-header {
+//     height: 90% ;
+//
+//     .card-image {
+//       width: 1em ;
+//       height: 18em ;
+//     }
+//
+//
+//   }
+//
+//   .card-view-button {
+//     height: 2em ;
+//   }
+// }
