--- a/src/component/frontend-component/main/part/_part.scss
+++ b/src/component/frontend-component/main/part/_part.scss
@@ -1,40 +1,40 @@
-@import "../../../../style/_main.scss";
-
-.clear-float {
-  clear: both;
-}
-
-.part-items-container * {
-  width: 100%;
-  height: 40%;
-
-}
-.app-bar {
-  z-index: 0!important;
-  margin-top: $pad*4 !important;
-  margin-bottom: $pad !important;
-}
-
-.card-item {
-  width: calc(90%/4) !important;
-  height: calc(100%) !important;
-  float: left !important;
-  margin-left: calc(10%/8) !important;
-  margin-right: calc(10%/8) !important;
-  margin-top: $pad*4 !important;
-  box-shadow: rgba(0, 0, 0, 0.12) 10px 5px 11px, rgba(0, 0, 0, 0.12) 0px 1px 4px !important;
-
-  .card-header {
-    height: 90% !important;
-
-    .card-image {
-      width: 1em !important;
-      height: 18em !important;
-    }
-
-  }
-
-  .card-view-button {
-    height: 2em !important;
-  }
-}
+// @import "../../../../style/_main.scss";
+//
+// .clear-float {
+//   clear: both;
+// }
+//
+// .part-items-container * {
+//   width: 100%;
+//   height: 40%;
+//
+// }
+// .app-bar {
+//   z-index: 0!important;
+//   margin-top: $pad*4 !important;
+//   margin-bottom: $pad !important;
+// }
+//
+// .card-item {
+//   width: calc(90%/4) !important;
+//   height: calc(100%) !important;
+//   float: left !important;
+//   margin-left: calc(10%/8) !important;
+//   margin-right: calc(10%/8) !important;
+//   margin-top: $pad*4 !important;
+//   box-shadow: rgba(0, 0, 0, 0.12) 10px 5px 11px, rgba(0, 0, 0, 0.12) 0px 1px 4px !important;
+//
+//   .card-header {
+//     height: 90% !important;
+//
+//     .card-image {
+//       width: 1em !important;
+//       height: 18em !important;
+//     }
+//
+//   }
+//
+//   .card-view-button {
+//     height: 2em !important;
+//   }
+// }
