--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -2,3 +2,11 @@
 @import "./_reset.scss";
 @import "./_base.scss";
 @import "./_vars.scss";
+
+body {
+  height: 100%;
+}
+
+main.frontend-main{
+  height: 70%;
+}
