address and admin login in the footer is styled

--- a/src/component/admin-component/admin-head/_admin-header.scss
+++ b/src/component/admin-component/admin-head/_admin-header.scss
@@ -1,28 +1,8 @@
-// @import url('https://fonts.googleapis.com/css?family=Lato');
-// @import "../../../style/_main.scss";
+@import url('https://fonts.googleapis.com/css?family=Lato');
+@import "../../../style/_main.scss";
 
-// .store-logo {
-//   width: 100px;
-//   margin-left: 50px;
-//   display: inline-block;
-// }
-// 
-// .fa {
-//   width: auto;
-// }
-//
-// .navigation {
-//   width: 30%;
-//   position: absolute;
-//   right: 20px;
-//   top: 80px;
-// }
-// .navigation-menu li{
-//   list-style-type: none;
-//   display: inline-block;
-//   width: auto;
-//   border-left: 1px solid $color-lightgrey;
-//   padding-left: 10px;
-//   font-family: $font-main;
-//   cursor: pointer;
-// }
+.store-logo-admin {
+  width: 100px;
+  margin: 25px 0 0 25px;
+  display: inline-block;
+}
