--- a/src/component/admin-component/login-form/_login-form.scss
+++ b/src/component/admin-component/login-form/_login-form.scss
@@ -1,14 +1,20 @@
 .login-form {
   margin-top: 50px;
+  width: 100%;
 }
 
 .login-input {
-  width: 300px;
-  margin: 8px auto;
+  padding: 0.5em;
+  border: 1px solid #e3e5e8;
+  border-radius: 10px;
+  margin-bottom: 0.5em;
+  resize: none;
+  width: 30%;
+  margin: auto 2%;
 }
 
 .login-button {
   cursor: pointer;
-  width: 100px;
-  margin: auto;
+  width: 20%;
+  margin: auto 2%;
 }
