--- a/src/component/frontend-component/main/board/_board.scss
+++ b/src/component/frontend-component/main/board/_board.scss
@@ -14,6 +14,7 @@
 
   .app-bar {
     margin: $pad 0;
+    padding: 0 0 0 1.25%;
     background-color: $color-primary;
     font-size: 3em;
     color: $color-font;
