--- a/src/component/frontend-component/main/item-modal/_item-modal.scss
+++ b/src/component/frontend-component/main/item-modal/_item-modal.scss
@@ -2,30 +2,26 @@
 
 /* The Modal (background) */
 .item-modal-background {
-    // display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 3; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,.5); /* Black w/ opacity */
 }
 
 /* Modal Content */
-
-
 .item-modal-content {
   position: relative;
   background-color: #fefefe;
-  margin: auto;
+  margin: 1% 20%;
   padding: 0;
   border: 1px solid #888;
-  width: 70%;
-  height: 70%;
+  width: 60%;
+  height: 95%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
@@ -41,21 +37,22 @@
 
   .modal-header{
     width: 100%;
-    height: 50%;
+    height: 45.5%;
   }
 
   img {
-    width: 48%;
-    height: 95%;
-    margin: 1% 1% 0% .5%;
+    width: 300px;
+    height: 300px;
+    margin: 1%;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   }
 
   .modal-header-right {
-    width: 49%;
+    width: 60%;
     height: 100%;
     margin-right: 1%;
+    float: right;
 
     h4 {
       width: 90%;
@@ -63,11 +60,13 @@
       text-align: center;
       padding-top: 1em;
       font-size: 2em;
+      font-family: $font-main;
     }
 
     button.item-modal-close {
       width: 10%;
       height: 20%;
+      margin: 1% 0 0 0;
       border-radius: 5px;
       float: right;
       &:hover {
@@ -78,9 +77,11 @@
     }
 
     button.add-to-cart {
-      width: 99%;
+      width: 100%;
       height: calc(100%/3);
       color: $color-white;
+      font-size: 2em;
+      font-weight: 500;
       border-radius: 5px;
       text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
       background: rgb(66, 184, 221); /* this is a light blue */
@@ -95,12 +96,12 @@
   .modal-body {
     width: 100%;
     height: 50%;
-    overflow: scroll;
     margin-top: $pad;
 
     p {
-      width: 96%;
-      margin: 2%;
+      width: 98%;
+      margin: 2% 1% 0 1%;
+      padding: 1%;
       text-align: center;
       font-style: italic;
       border: 1px solid $color-grey;
@@ -109,21 +110,21 @@
     }
 
     h6 {
-      width: 96%;
-      margin: 2%;
+      width: 98%;
+      margin: 1%;
       background-color: $color-grey;
       border-radius: 5px;
       color: $color-white;
       font-size: 1.75em;
-      padding-left: 1.5em;
-      padding-top: 1.5em;
+      padding: .5em;
     }
 
     ul {
       margin: 0;
+      padding: .5em 0 0 .5em;
       li {
         list-style: none;
-        padding-left: 3em;
+        padding: .3em 0 0 0;
         font-size: 1.25em;
       }
     }
